[package]
name = "mqtt_sensors"
version = "0.1.0"
authors = ["makadaw <imakadaw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
log = "0.4"
eventual = "0.1.7"

# System info
sys-info = "0.5"

# MQTT
paho-mqtt = "0.6.0"
futures = "0.1"
json = "0.12.1"

